fixed language text overflow and resized icons

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,8 @@ html{
 }
 
 figcaption{
-  font-size: 14px;
-  padding-top: 3px;
+  
+  padding-top: 4px;
+  
+  
 }
